--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="icon" href="./img/logo-removebg.png">
+    <link rel="stylesheet" href="./css/header.css">
 </head>
 <body>
 <!--HEADER-->
 <header id="header" class="header">
     <div class="container">
-        <div class="row">
-            
+        <div class="rows">
+            ewtwt
             <div class="two columns u-pull-right">
                 <ul>
                     <li class="submenu">
