--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOG IN</title>
+    <link rel="stylesheet" href="login.css">
+    <title>LOGIN</title>
 </head>
 <body>
     <section>
@@ -12,21 +13,28 @@
             <div class="form-value">
                 <h2>LOGIN</h2>
                 <div class="inputbox">
+                    <ion-icon name="mail-outline"></ion-icon>
                     <input type="email" required>
                     <label for="">Email</label>
                 </div>
                 <div class="inputbox">
+                    <ion-icon name="lock-closed-outline"></ion-icon>
                     <input type="password" required>
                     <label for="">Password</label>
                 </div>
                 <div class="forget">
                     <label for=""><input type="checkbox">Remenber Me</label>
-                    <a href=""></a>
+                    <a href="#">Forget Password</a>
+                </div>
+                <button>Long in</button>
+                <div class="register">
+                    <p>No tengo una cuenta <a href="#">Register</a> </p>
                 </div>
             </div>
         </div>
 
     </section>
-    
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
