--- a/login/login.html
+++ b/login/login.html
@@ -11,25 +11,27 @@
     <section>
         <div class="form-box">
             <div class="form-value">
-                <h2>LOGIN</h2>
-                <div class="inputbox">
-                    <ion-icon name="mail-outline"></ion-icon>
-                    <input type="email" required>
-                    <label for="">Email</label>
-                </div>
-                <div class="inputbox">
-                    <ion-icon name="lock-closed-outline"></ion-icon>
-                    <input type="password" required>
-                    <label for="">Password</label>
-                </div>
-                <div class="forget">
-                    <label for=""><input type="checkbox">Remenber Me</label>
-                    <a href="#">Forget Password</a>
-                </div>
-                <button>Long in</button>
-                <div class="register">
-                    <p>No tengo una cuenta <a href="#">Register</a> </p>
-                </div>
+                <form action="">
+                    <h2>Login</h2>
+                    <div class="inputbox">
+                        <ion-icon name="mail-outline"></ion-icon>
+                        <input type="email" required>
+                        <label for="">Email</label>
+                    </div>
+                    <div class="inputbox">
+                        <ion-icon name="lock-closed-outline"></ion-icon>
+                        <input type="password" required>
+                        <label for="">Password</label>
+                    </div>
+                    <div class="forget">
+                        <label for=""><input type="checkbox">Remenber Me  <a href="#">Forget Password</a></label>
+                        
+                    </div>
+                    <button>Long in</button>
+                    <div class="register">
+                        <p>No tengo una cuenta <a href="#">Register</a> </p>
+                    </div>
+                </form>
             </div>
         </div>
 
